add animal imgs

--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,96 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+  display: block;
+  width: 200px;
+  padding: 10px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+.footer {
+  padding: 100px;
+}
+
+button {
+  background-color: #728e3e;
+  border: 2px solid black;
+  font-size: 18px;
+  cursor: pointer;
+}
+.dogs {
+  display: flex;
+  justify-content: space-between;
+  padding: 50px;
+  grid-gap: 10px;
+}
+.golden {
+  height: 400px;
+  width: 400px;
+}
+
+.pitbull {
+  height: 400px;
+  width: 400px;
+}
+
+.puffball {
+  height: 400px;
+  width: 400px;
+}
+
+.cats {
+  display: flex;
+  justify-content: space-between;
+  padding: 50px;
+  grid-gap: 10px;
+}
+
+
+.fluffy {
+  height: 400px;
+  width: 400px;
+}
+
+.naked {
+  height: 400px;
+  width: 400px;
+}
+
+.claws {
+  height: 400px;
+  width: 400px;
+}
+
+.exotic {
+  display: flex;
+  justify-content: space-between;
+  padding: 50px;
+  grid-gap: 10px;
+}
+
+.parrot {
+  height: 400px;
+  width: 400px;
+}
+
+.linx {
+  height: 400px;
+  width: 400px;
+}
+
+.snake {
+  height: 400px;
+  width: 400px;
+}
