--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html {
+  scroll-behavior: smooth;
+  font-size: 20px;
+}
+
 .heading {
   text-align: center;
 }
@@ -25,8 +30,9 @@ a {
   text-decoration: none;
   color: black;
   display: block;
-  width: 200px;
+  width: 150px;
   padding: 10px;
+  float: right;
 }
 
 ul {
@@ -39,14 +45,18 @@ ul {
   width: 100%;
 }
 .footer {
-  padding: 100px;
+  padding: 600px;
 }
 
 button {
-  background-color: #728e3e;
+  background-color:  #D2B48C;
   border: 2px solid black;
   font-size: 18px;
   cursor: pointer;
+}
+
+.active {
+  background-color: #82b74b;
 }
 .dogs {
   display: flex;
@@ -112,4 +122,8 @@ button {
 .snake {
   height: 400px;
   width: 400px;
+}
+
+.contact {
+  text-align: center;
 }
