delete dynamic navbar, add li to HTML

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ ul {
 }
 
 button {
-  background-color:  blue;
+  background-color:  beige;
   border: 2px solid black;
   font-size: 18px;
   cursor: pointer;
